tests/custom/STARIS_2022/operation-type-errors/toMSet-type-error/stderr.expected
Error:
    toMSet-type-error.essence:2:23:
  |
2 | such that b = (toMSet(false) = (2, 3, 2))
  |                       ^^^^^
Type error:
	Expected: "Matrix ,list,function,relation,mset,set "
	Got: bool

toMSet-type-error.essence:2:32:
  |
2 | such that b = (toMSet(false) = (2, 3, 2))
  |                                ^^^^^^^^^
Type error:
	Expected: mset of ?
	Got: (int, int, int)

